So I was able to accomplished the desired effect. Apparently if I set the height of item to 152px it fixes the shifting I was having with the other divs. I figured this out by selecting the height property of div item in the javascript console and then moving the mouse over the actual div and then pressing the down key until the divs shifted into the right place. So it works. Now why the magic number happens to be 152px I am still trying to find out.

--- a/apple.css
+++ b/apple.css
@@ -13,7 +13,7 @@
 #item {
 	display: inline-block;
 	width: 136px;
-	height: 150px;
+	height: 152px;
 	margin-top: 25px;
 	border-radius: 10px;
 }
